--- a/index.html
+++ b/index.html
@@ -4,14 +4,61 @@
 <head>
     <meta charset="UTF-8">
     <title>Firebase Train | Eric Remoroza</title>
+
+    <!--bootstrap link-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+    <!--moment.js link-->
+    <script src="https://momentjs.com/downloads/moment.js"></script>
+    <!--stylesheet link-->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
+    <div class="container">
+        <div class="jumbotron">
+            <div class="text center">
+                <h1>Firebase Train Station</h1>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+
+                <div class="panel panel">
+                    <div class="panel-heading">
+                        <h3>Current Train Schedule</h3>
+                    </div>
+                </div>
+
+                <div class="panel-body">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Train Name</th>
+                                <th>Destination</th>
+                                <th>Frequency (min)</th>
+                                <th>Next Arrival</th>
+                            <tr>Minutes Away</tr>
+                            </tr>
+                        </thead>
+                    </table>
+                </div>
+                <form>
+                    <button type="submit" id="newTrain">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!--firebase script-->
+    <script src="https://www.gstatic.com/firebasejs/5.5.1/firebase.js"></script>
     <!--jQuery link-->
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous"></script>
-    <!--moment.js link-->
-    <script src="https://momentjs.com/downloads/moment.js"></script>
+    <!--javascript link-->
+    <script src="assets/javascript/app.js"></script>
+
 </body>
 
 </html>
