--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="jumbotron">
             <div class="text center">
-                <h1>Firebase Train Station</h1>
+                <h1>United Train Station</h1>
             </div>
         </div>
 
@@ -32,9 +32,9 @@
 
 
                     <div class="panel-body">
-                        <table>
+                        <table id="trainsInfo">
                             <thead>
-                                <tr id="trainsInfo">
+                                <tr>
                                     <th>Train Name</th>
                                     <th>Destination</th>
                                     <th>Frequency (min)</th>
@@ -54,25 +54,25 @@
                     <div class="panel-body">
                         <form>
                             <div>
-                                <label>Train Name</label>
+                                <label id="form-group">Train Name</label>
                                 <input type="text" id="trainInput">
                             </div>
 
                             <div>
-                                <label>Destination</label>
+                                <label id="form-group">Destination</label>
                                 <input type="text" id="destInput">
                             </div>
                             <div>
-                                <label>First Train Time(HH:mm - military time)</label>
+                                <label id="form-group">First Train Time(HH:mm - military time)</label>
                                 <input type="text" id="firstTrainInput">
                             </div>
 
                             <div>
-                                <label>Frequency (min)</label>
+                                <label id="form-group">Frequency (min)</label>
                                 <input type="text" id="frequencyInput">
                             </div>
 
-                            <button type="submit" id="newTrain">Submit</button>
+                            <button type="submit" id="trainButton">Submit</button>
                         </form>
                     </div>
                 </div>
