--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-lg-12">
                 <!--current train schedule-->
                 <div class="panel panel">
                     <div class="panel-heading">
@@ -46,6 +46,10 @@
                         </table>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
                 <!--add train here-->
                 <div class="panel panel">
                     <div class="panel-heading">
